# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([SRx], [0.4.0.1], [bgpsrx-dev@nist.gov])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_MAKE_SET
LT_PREREQ([2.2])
LT_INIT([dlopen])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SUBDIRS([src])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
